# F2F

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
addons/blender/f2f_addon/: README.md  __init__.py
addons/maya/: README.md
api/: README.md  pyproject.toml  ruff.toml
api/alembic/: env.py
api/alembic/versions/: 0001_baseline.py
api/app/: __init__.py  celery_app.py  config.py  db.py  main.py
api/app/ledger/: README.md  __init__.py
api/app/manufacturability/: README.md  __init__.py
api/app/mcp/: README.md  __init__.py
api/app/models/: __init__.py
api/app/pipeline/: README.md  __init__.py
api/app/providers/: README.md  __init__.py
api/app/routes/: __init__.py  health.py  tasks.py
api/app/schemas/: __init__.py
api/tests/: conftest.py  test_health.py
docs/: mastery-compact.md  project-changelog.md  project-context.md  project-discussion.md  project-roadmap.md
docs/features/01-project-foundation/: architecture.md  changelog.md  discussion.md  tasks.md  testplan.md
infra/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
infra/minio/: create-buckets.sh
infra/scripts/: dev.ps1  dev.sh
web/: README.md  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/components/: HealthBadge.tsx
web/lib/: api.ts
web/tests/: smoke.test.ts
worker/: README.md  pyproject.toml  ruff.toml
worker/blender_scripts/: smoke.py
worker/tests/: test_ping.py
worker/worker/: __init__.py  celery_app.py  config.py
worker/worker/tasks/: ping.py
